...
                android:id="@+id/layoutRecordLinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRecordDelete"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:text="@string/record_delete_action"
                android:textColor="@color/error"
                android:visibility="gone"
...
